컬라이더 구현

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -161,6 +161,9 @@ call ComponentAuto.exe</Command>
     <ClInclude Include="CCollider2D.h" />
     <ClInclude Include="CMeshRender.h" />
     <ClInclude Include="CMissileScript.h" />
+    <ClInclude Include="CMonsterProtile.h" />
+    <ClInclude Include="CMonsterScript.h" />
+    <ClInclude Include="CollisionMgr.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="components.h" />
     <ClInclude Include="ConstBuffer.h" />
@@ -210,6 +213,9 @@ call ComponentAuto.exe</Command>
     <ClCompile Include="CCollider2D.cpp" />
     <ClCompile Include="CMeshRender.cpp" />
     <ClCompile Include="CMissileScript.cpp" />
+    <ClCompile Include="CMonsterProtile.cpp" />
+    <ClCompile Include="CMonsterScript.cpp" />
+    <ClCompile Include="CollisionMgr.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ConstBuffer.cpp" />
     <ClCompile Include="CPlanetControllerScript.cpp" />
