타입맵 추가 스트럭트버퍼 추가

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -163,6 +163,7 @@ call ComponentAuto.exe</Command>
     <ClInclude Include="Asset.h" />
     <ClInclude Include="AssetMgr.h" />
     <ClInclude Include="ATexture.h" />
+    <ClInclude Include="ATileMap.h" />
     <ClInclude Include="CBillboardRender.h" />
     <ClInclude Include="CCamera.h" />
     <ClInclude Include="CCamMoveScript.h" />
@@ -182,6 +183,7 @@ call ComponentAuto.exe</Command>
     <ClInclude Include="CScript.h" />
     <ClInclude Include="CSpriteRender.h" />
     <ClInclude Include="CStateScript.h" />
+    <ClInclude Include="CTileRender.h" />
     <ClInclude Include="CTransform.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="Device.h" />
@@ -203,6 +205,7 @@ call ComponentAuto.exe</Command>
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SimpleMath.h" />
     <ClInclude Include="struct.h" />
+    <ClInclude Include="StructuredBuffer.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="single.h" />
     <ClInclude Include="TaskMgr.h" />
@@ -219,6 +222,7 @@ call ComponentAuto.exe</Command>
     <ClCompile Include="Asset.cpp" />
     <ClCompile Include="AssetMgr.cpp" />
     <ClCompile Include="ATexture.cpp" />
+    <ClCompile Include="ATileMap.cpp" />
     <ClCompile Include="CBillboardRender.cpp" />
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CCamMoveScript.cpp" />
@@ -237,6 +241,7 @@ call ComponentAuto.exe</Command>
     <ClCompile Include="CScript.cpp" />
     <ClCompile Include="CSpriteRender.cpp" />
     <ClCompile Include="CStateScript.cpp" />
+    <ClCompile Include="CTileRender.cpp" />
     <ClCompile Include="CTransform.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="Engine.cpp" />
@@ -255,6 +260,7 @@ call ComponentAuto.exe</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RenderMgr.cpp" />
+    <ClCompile Include="StructuredBuffer.cpp" />
     <ClCompile Include="TaskMgr.cpp" />
     <ClCompile Include="TimeMgr.cpp" />
   </ItemGroup>
@@ -286,6 +292,7 @@ call ComponentAuto.exe</Command>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
     </FxCompile>
+    <FxCompile Include="tile.fx" />
     <FxCompile Include="value.fx">
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
