imGui 추가 및 사용예시 학습

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -77,6 +77,7 @@
     <OutDir>$(SolutionDir)Game\Bin\</OutDir>
     <ExternalIncludePath>$(SolutionDir)External\Include\;$(ExternalIncludePath)</ExternalIncludePath>
     <LibraryPath>$(SolutionDir)\External\Library\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)Game\Bin\</OutDir>
@@ -130,7 +131,7 @@
     <PreBuildEvent>
       <Command>cd $(SolutionDir)
 call CopyShader.bat
-call ComponentAuto.exe</Command>
+</Command>
     </PreBuildEvent>
     <FxCompile>
       <ShaderType>Effect</ShaderType>
@@ -189,6 +190,8 @@ call ComponentAuto.exe</Command>
     <ClInclude Include="CTransform.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="Device.h" />
+    <ClInclude Include="EditorMgr.h" />
+    <ClInclude Include="EditorUI.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="enum.h" />
@@ -197,10 +200,21 @@ call ComponentAuto.exe</Command>
     <ClInclude Include="GameClient.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="global.h" />
+    <ClInclude Include="ImGui\imconfig.h" />
+    <ClInclude Include="ImGui\imgui.h" />
+    <ClInclude Include="ImGui\imgui_impl_dx11.h" />
+    <ClInclude Include="ImGui\imgui_impl_win32.h" />
+    <ClInclude Include="ImGui\imgui_internal.h" />
+    <ClInclude Include="ImGui\imstb_rectpack.h" />
+    <ClInclude Include="ImGui\imstb_textedit.h" />
+    <ClInclude Include="ImGui\imstb_truetype.h" />
+    <ClInclude Include="Inspector.h" />
     <ClInclude Include="KeyMgr.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="LevelMgr.h" />
     <ClInclude Include="AMaterial.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="Outliner.h" />
     <ClInclude Include="PathMgr.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RenderMgr.h" />
@@ -247,17 +261,29 @@ call ComponentAuto.exe</Command>
     <ClCompile Include="CTileRender.cpp" />
     <ClCompile Include="CTransform.cpp" />
     <ClCompile Include="Device.cpp" />
+    <ClCompile Include="EditorMgr.cpp" />
+    <ClCompile Include="EditorUI.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Engine_init.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="extern.cpp" />
     <ClCompile Include="func.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="ImGui\imgui.cpp" />
+    <ClCompile Include="ImGui\imgui_demo.cpp" />
+    <ClCompile Include="ImGui\imgui_draw.cpp" />
+    <ClCompile Include="ImGui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="ImGui\imgui_impl_win32.cpp" />
+    <ClCompile Include="ImGui\imgui_tables.cpp" />
+    <ClCompile Include="ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="Inspector.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="LevelMgr.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="AMaterial.cpp" />
+    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Outliner.cpp" />
     <ClCompile Include="PathMgr.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
